build/generated/CHTL/CHTLParser.cpp

// Generated from /workspace/grammar/CHTL.g4 by ANTLR 4.13.1


#include "CHTLVisitor.h"

#include "CHTLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CHTLParserStaticData final {
  CHTLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTLParserStaticData(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData(CHTLParserStaticData&&) = delete;
  CHTLParserStaticData& operator=(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData& operator=(CHTLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTLParserStaticData *chtlParserStaticData = nullptr;

void chtlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtlParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTLParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "comment", "textNode", "stringLiteral", "element", 
      "elementName", "elementBody", "elementContent", "attribute", "attributeName", 
      "attributeValue", "styleBlock", "styleContent", "cssProperty", "cssPropertyName", 
      "cssPropertyValue", "cssValue", "cssSelector", "selectorPattern", 
      "classSelector", "idSelector", "ampersandSelector", "pseudoSelector", 
      "scriptBlock", "jsCode", "templateDeclaration", "templateType", "templateName", 
      "templateBody", "templateContent", "varDeclaration", "customDeclaration", 
      "customType", "customName", "customBody", "customContent", "cssPropertyWithoutValue", 
      "templateUsage", "templateSpecialization", "specializationContent", 
      "varAssignment", "customUsage", "customSpecialization", "inheritStatement", 
      "deleteStatement", "deleteTarget", "elementIndex", "insertStatement", 
      "insertPosition", "insertTarget", "insertContent", "exceptStatement", 
      "exceptTarget", "originBlock", "originType", "originName", "originBody", 
      "rawContent", "importStatement", "importContent", "importHtml", "importCss", 
      "importJs", "importChtl", "importCustom", "importTemplate", "filePath", 
      "namespaceDeclaration", "namespaceName", "namespaceBody", "namespaceContent", 
      "configurationBlock", "configContent", "configAssignment", "configValue", 
      "nameBlock", "nameAssignment"
    },
    std::vector<std::string>{
      "", "'text'", "'style'", "'script'", "'Template'", "'Custom'", "'Origin'", 
      "'Import'", "'Namespace'", "'Configuration'", "'Name'", "'Info'", 
      "'Export'", "", "'@Element'", "'@Var'", "'@Html'", "'@JavaScript'", 
      "'@Chtl'", "'inherit'", "'delete'", "'insert'", "'after'", "'before'", 
      "'replace'", "'at'", "'top'", "'bottom'", "'from'", "'as'", "'except'", 
      "", "':'", "';'", "'='", "','", "'.'", "'#'", "'&'", "'-'", "'{'", 
      "'}'", "'['", "']'", "'('", "')'"
    },
    std::vector<std::string>{
      "", "TEXT", "STYLE", "SCRIPT", "TEMPLATE", "CUSTOM", "ORIGIN", "IMPORT", 
      "NAMESPACE", "CONFIGURATION", "NAME", "INFO", "EXPORT", "AT_STYLE", 
      "AT_ELEMENT", "AT_VAR", "AT_HTML", "AT_JAVASCRIPT", "AT_CHTL", "INHERIT", 
      "DELETE", "INSERT", "AFTER", "BEFORE", "REPLACE", "AT", "TOP", "BOTTOM", 
      "FROM", "AS", "EXCEPT", "BOOLEAN", "COLON", "SEMICOLON", "EQUALS", 
      "COMMA", "DOT", "HASH", "AMPERSAND", "MINUS", "LBRACE", "RBRACE", 
      "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "LINE_COMMENT", "BLOCK_COMMENT", 
      "GENERATOR_COMMENT", "STRING_LITERAL", "SINGLE_STRING_LITERAL", "IDENTIFIER", 
      "NUMBER", "UNQUOTED_LITERAL", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtlParserStaticData = staticData.release();
}

}

CHTLParser::CHTLParser(TokenStream *input) : CHTLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTLParser::CHTLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtlParserStaticData->atn, chtlParserStaticData->decisionToDFA, chtlParserStaticData->sharedContextCache, options);
}

CHTLParser::~CHTLParser() {
  delete _interpreter;
}

const atn::ATN& CHTLParser::getATN() const {
  return *chtlParserStaticData->atn;
}

std::string CHTLParser::getGrammarFileName() const {
  return "CHTL.g4";
}

const std::vector<std::string>& CHTLParser::getRuleNames() const {
  return chtlParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTLParser::getVocabulary() const {
  return chtlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTLParser::getSerializedATN() const {
  return chtlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CHTLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ProgramContext::EOF() {
  return getToken(CHTLParser::EOF, 0);
}

std::vector<CHTLParser::StatementContext *> CHTLParser::ProgramContext::statement() {
  return getRuleContexts<CHTLParser::StatementContext>();
}

CHTLParser::StatementContext* CHTLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<CHTLParser::StatementContext>(i);
}


size_t CHTLParser::ProgramContext::getRuleIndex() const {
  return CHTLParser::RuleProgram;
}


std::any CHTLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ProgramContext* CHTLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2748779069440014) != 0)) {
      setState(156);
      statement();
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(162);
    match(CHTLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CHTLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::ElementContext* CHTLParser::StatementContext::element() {
  return getRuleContext<CHTLParser::ElementContext>(0);
}

CHTLParser::TextNodeContext* CHTLParser::StatementContext::textNode() {
  return getRuleContext<CHTLParser::TextNodeContext>(0);
}

CHTLParser::StyleBlockContext* CHTLParser::StatementContext::styleBlock() {
  return getRuleContext<CHTLParser::StyleBlockContext>(0);
}

CHTLParser::ScriptBlockContext* CHTLParser::StatementContext::scriptBlock() {
  return getRuleContext<CHTLParser::ScriptBlockContext>(0);
}

CHTLParser::TemplateDeclarationContext* CHTLParser::StatementContext::templateDeclaration() {
  return getRuleContext<CHTLParser::TemplateDeclarationContext>(0);
}

CHTLParser::CustomDeclarationContext* CHTLParser::StatementContext::customDeclaration() {
  return getRuleContext<CHTLParser::CustomDeclarationContext>(0);
}

CHTLParser::OriginBlockContext* CHTLParser::StatementContext::originBlock() {
  return getRuleContext<CHTLParser::OriginBlockContext>(0);
}

CHTLParser::ImportStatementContext* CHTLParser::StatementContext::importStatement() {
  return getRuleContext<CHTLParser::ImportStatementContext>(0);
}

CHTLParser::NamespaceDeclarationContext* CHTLParser::StatementContext::namespaceDeclaration() {
  return getRuleContext<CHTLParser::NamespaceDeclarationContext>(0);
}

CHTLParser::ConfigurationBlockContext* CHTLParser::StatementContext::configurationBlock() {
  return getRuleContext<CHTLParser::ConfigurationBlockContext>(0);
}

CHTLParser::CommentContext* CHTLParser::StatementContext::comment() {
  return getRuleContext<CHTLParser::CommentContext>(0);
}


size_t CHTLParser::StatementContext::getRuleIndex() const {
  return CHTLParser::RuleStatement;
}


std::any CHTLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::StatementContext* CHTLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(175);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(164);
      element();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(165);
      textNode();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(166);
      styleBlock();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(167);
      scriptBlock();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(168);
      templateDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(169);
      customDeclaration();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(170);
      originBlock();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(171);
      importStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(172);
      namespaceDeclaration();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(173);
      configurationBlock();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(174);
      comment();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

CHTLParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::CommentContext::LINE_COMMENT() {
  return getToken(CHTLParser::LINE_COMMENT, 0);
}

tree::TerminalNode* CHTLParser::CommentContext::BLOCK_COMMENT() {
  return getToken(CHTLParser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* CHTLParser::CommentContext::GENERATOR_COMMENT() {
  return getToken(CHTLParser::GENERATOR_COMMENT, 0);
}


size_t CHTLParser::CommentContext::getRuleIndex() const {
  return CHTLParser::RuleComment;
}


std::any CHTLParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::CommentContext* CHTLParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTLParser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 492581209243648) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextNodeContext ------------------------------------------------------------------

CHTLParser::TextNodeContext::TextNodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::TextNodeContext::TEXT() {
  return getToken(CHTLParser::TEXT, 0);
}

tree::TerminalNode* CHTLParser::TextNodeContext::LBRACE() {
  return getToken(CHTLParser::LBRACE, 0);
}

CHTLParser::StringLiteralContext* CHTLParser::TextNodeContext::stringLiteral() {
  return getRuleContext<CHTLParser::StringLiteralContext>(0);
}

tree::TerminalNode* CHTLParser::TextNodeContext::RBRACE() {
  return getToken(CHTLParser::RBRACE, 0);
}


size_t CHTLParser::TextNodeContext::getRuleIndex() const {
  return CHTLParser::RuleTextNode;
}


std::any CHTLParser::TextNodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitTextNode(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::TextNodeContext* CHTLParser::textNode() {
  TextNodeContext *_localctx = _tracker.createInstance<TextNodeContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTLParser::RuleTextNode);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(179);
    match(CHTLParser::TEXT);
    setState(180);
    match(CHTLParser::LBRACE);
    setState(181);
    stringLiteral();
    setState(182);
    match(CHTLParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringLiteralContext ------------------------------------------------------------------

CHTLParser::StringLiteralContext::StringLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::StringLiteralContext::STRING_LITERAL() {
  return getToken(CHTLParser::STRING_LITERAL, 0);
}

tree::TerminalNode* CHTLParser::StringLiteralContext::SINGLE_STRING_LITERAL() {
  return getToken(CHTLParser::SINGLE_STRING_LITERAL, 0);
}

tree::TerminalNode* CHTLParser::StringLiteralContext::UNQUOTED_LITERAL() {
  return getToken(CHTLParser::UNQUOTED_LITERAL, 0);
}


size_t CHTLParser::StringLiteralContext::getRuleIndex() const {
  return CHTLParser::RuleStringLiteral;
}


std::any CHTLParser::StringLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitStringLiteral(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::StringLiteralContext* CHTLParser::stringLiteral() {
  StringLiteralContext *_localctx = _tracker.createInstance<StringLiteralContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTLParser::RuleStringLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 10696049115004928) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

CHTLParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::ElementNameContext* CHTLParser::ElementContext::elementName() {
  return getRuleContext<CHTLParser::ElementNameContext>(0);
}

CHTLParser::ElementBodyContext* CHTLParser::ElementContext::elementBody() {
  return getRuleContext<CHTLParser::ElementBodyContext>(0);
}


size_t CHTLParser::ElementContext::getRuleIndex() const {
  return CHTLParser::RuleElement;
}


std::any CHTLParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ElementContext* CHTLParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTLParser::RuleElement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(186);
    elementName();
    setState(188);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CHTLParser::LBRACE) {
      setState(187);
      elementBody();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementNameContext ------------------------------------------------------------------

CHTLParser::ElementNameContext::ElementNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ElementNameContext::IDENTIFIER() {
  return getToken(CHTLParser::IDENTIFIER, 0);
}


size_t CHTLParser::ElementNameContext::getRuleIndex() const {
  return CHTLParser::RuleElementName;
}


std::any CHTLParser::ElementNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitElementName(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ElementNameContext* CHTLParser::elementName() {
  ElementNameContext *_localctx = _tracker.createInstance<ElementNameContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTLParser::RuleElementName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(190);
    match(CHTLParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementBodyContext ------------------------------------------------------------------

CHTLParser::ElementBodyContext::ElementBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ElementBodyContext::LBRACE() {
  return getToken(CHTLParser::LBRACE, 0);
}

tree::TerminalNode* CHTLParser::ElementBodyContext::RBRACE() {
  return getToken(CHTLParser::RBRACE, 0);
}

std::vector<CHTLParser::ElementContentContext *> CHTLParser::ElementBodyContext::elementContent() {
  return getRuleContexts<CHTLParser::ElementContentContext>();
}

CHTLParser::ElementContentContext* CHTLParser::ElementBodyContext::elementContent(size_t i) {
  return getRuleContext<CHTLParser::ElementContentContext>(i);
}


size_t CHTLParser::ElementBodyContext::getRuleIndex() const {
  return CHTLParser::RuleElementBody;
}


std::any CHTLParser::ElementBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitElementBody(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ElementBodyContext* CHTLParser::elementBody() {
  ElementBodyContext *_localctx = _tracker.createInstance<ElementBodyContext>(_ctx, getState());
  enterRule(_localctx, 14, CHTLParser::RuleElementBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    match(CHTLParser::LBRACE);
    setState(196);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2256198937141262) != 0)) {
      setState(193);
      elementContent();
      setState(198);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(199);
    match(CHTLParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContentContext ------------------------------------------------------------------

CHTLParser::ElementContentContext::ElementContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::AttributeContext* CHTLParser::ElementContentContext::attribute() {
  return getRuleContext<CHTLParser::AttributeContext>(0);
}

CHTLParser::ElementContext* CHTLParser::ElementContentContext::element() {
  return getRuleContext<CHTLParser::ElementContext>(0);
}

CHTLParser::TextNodeContext* CHTLParser::ElementContentContext::textNode() {
  return getRuleContext<CHTLParser::TextNodeContext>(0);
}

CHTLParser::StyleBlockContext* CHTLParser::ElementContentContext::styleBlock() {
  return getRuleContext<CHTLParser::StyleBlockContext>(0);
}

CHTLParser::ScriptBlockContext* CHTLParser::ElementContentContext::scriptBlock() {
  return getRuleContext<CHTLParser::ScriptBlockContext>(0);
}
